--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Alex Advent</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Rajpurohit Vijesh,Python developer,Freelancer,Machine Learning Enthusiastic,Alex Advent,Full stack Developer" />
+    <meta name="keywords" content="Rajpurohit Vijesh,Python developer,Freelancer,Machine Learning Enthusiast,Alex Advent,Full stack Developer" />
     <meta name="description" content="Let your every minute will be adventurer. --Alex Advent" />
     <!-- Robot.txt -->
     <meta name="robots" content="index,follow" />
